@@ -33,7 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-* 
+* [mms] Fix saving expanded state when expanding all mailboxes when all mailboxes are already cached in the browser.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -3643,7 +3643,7 @@
    <date>2014-06-04</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-* 
+* [mms] Fix saving expanded state when expanding all mailboxes when all mailboxes are already cached in the browser.
    </notes>
   </release>
  </changelog>
